Adicionando media query no footer

--- a/estilo.css
+++ b/estilo.css
@@ -303,6 +303,19 @@
         font-size: 17px;
     }
 
+    /* Footer */
+
+    footer .linha1{
+        flex-direction: column;
+    }
+
+    footer .endereco{
+        width: 95%;
+        margin-bottom: 20px;
+    }
+
+
+
 }    
 
 
